Bug #13441
SMB: Creating named streams on existing files is not quite right
Start date:
Due date:
% Done:
0%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
In MS-FSA, 'file lookup' effectively has the following branches:
1. If the file doesn't exist, create the file and the stream
2. If the file exists, and the stream exists, perform access and sharing checks
3. If the file exists, but the stream doesn't exist, perform access checks, then create the stream.
Currently, 1 and 3 are collapsed into a single branch: If the file exists, but the stream doesn't, that's treated as if the file didn't exist.