13441 SMB: Creating named streams on existing files is not quite right Reviewed by: Evan Layton <elayton@tintri.com> Reviewed by: Gordon Ross <gordon.ross@tintri.com> Reviewed by: Roman Strashkin <rstrashkin@tintri.com> Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Robert Mustacchi <rm@fingolfin.org>