usr/src/uts/common/fs/smbsrv/smb_common_open.c
@@ -21,7 +21,7 @@
 
 /*
  * Copyright (c) 2007, 2010, Oracle and/or its affiliates. All rights reserved.
- * Copyright 2017 Nexenta Systems, Inc.  All rights reserved.
+ * Copyright 2019 Nexenta Systems, Inc.  All rights reserved.
  */
 
 /*
@@ -253,6 +253,7 @@ smb_common_open(smb_request_t *sr)
 	smb_node_t	*fnode = NULL;
 	smb_node_t	*dnode = NULL;
 	smb_node_t	*cur_node = NULL;
+	smb_node_t	*tmp_node = NULL;
 	smb_arg_open_t	*op = &sr->sr_open;
 	smb_pathname_t	*pn = &op->fqi.fq_path;
 	smb_ofile_t	*of = NULL;
@@ -269,6 +270,7 @@ smb_common_open(smb_request_t *sr)
 	uint16_t	tree_fid = 0;
 	boolean_t	created = B_FALSE;
 	boolean_t	last_comp_found = B_FALSE;
+	boolean_t	stream_found = B_FALSE;
 	boolean_t	opening_incr = B_FALSE;
 	boolean_t	dnode_held = B_FALSE;
 	boolean_t	dnode_wlock = B_FALSE;
@@ -278,6 +280,7 @@ smb_common_open(smb_request_t *sr)
 	boolean_t	did_open = B_FALSE;
 	boolean_t	did_break_handle = B_FALSE;
 	boolean_t	did_cleanup_orphans = B_FALSE;
+	char		*sname = NULL;
 
 	/* Get out now if we've been cancelled. */
 	mutex_enter(&sr->sr_mutex);
@@ -418,9 +421,13 @@ smb_common_open(smb_request_t *sr)
 	if ((op->desired_access & ~FILE_READ_ATTRIBUTES) == DELETE)
 		lookup_flags &= ~SMB_FOLLOW_LINKS;
 
-	rc = smb_fsop_lookup_name(sr, zone_kcred(), lookup_flags,
+	/*
+	 * Lookup *just* the file portion of the name.
+	 * Returns stream name in sname, which this allocates
+	 */
+	rc = smb_fsop_lookup_file(sr, zone_kcred(), lookup_flags,
 	    sr->tid_tree->t_snode, op->fqi.fq_dnode, op->fqi.fq_last_comp,
-	    &op->fqi.fq_fnode);
+	    &sname, &op->fqi.fq_fnode);
 
 	if (rc == 0) {
 		last_comp_found = B_TRUE;
@@ -449,9 +456,6 @@ smb_common_open(smb_request_t *sr)
 
 	if (last_comp_found) {
 
-		smb_node_unlock(dnode);
-		dnode_wlock = B_FALSE;
-
 		fnode = op->fqi.fq_fnode;
 		dnode = op->fqi.fq_dnode;
 
@@ -468,8 +472,9 @@ smb_common_open(smb_request_t *sr)
 		 *   it must NOT be (required by Lotus Notes)
 		 * - the target is NOT a directory and client requires that
 		 *   it MUST be.
+		 * Streams are never directories.
 		 */
-		if (smb_node_is_dir(fnode)) {
+		if (smb_node_is_dir(fnode) && sname == NULL) {
 			if (op->create_options & FILE_NON_DIRECTORY_FILE) {
 				status = NT_STATUS_FILE_IS_A_DIRECTORY;
 				goto errout;
@@ -482,20 +487,81 @@ smb_common_open(smb_request_t *sr)
 			}
 		}
 
-		/*
-		 * No more open should be accepted when "Delete on close"
-		 * flag is set.
-		 */
-		if (fnode->flags & NODE_FLAGS_DELETE_ON_CLOSE) {
-			status = NT_STATUS_DELETE_PENDING;
-			goto errout;
+		/* If we're given a stream name, look it up now */
+		if (sname != NULL) {
+			tmp_node = fnode;
+			rc = smb_fsop_lookup_stream(sr, zone_kcred(),
+			    lookup_flags, sr->tid_tree->t_snode, fnode, sname,
+			    &fnode);
+		} else {
+			rc = 0;
 		}
 
-		/*
-		 * Specified file already exists so the operation should fail.
-		 */
-		if (op->create_disposition == FILE_CREATE) {
-			status = NT_STATUS_OBJECT_NAME_COLLISION;
+		if (rc == 0) { /* Stream Exists (including unnamed stream) */
+			stream_found = B_TRUE;
+			smb_node_unlock(dnode);
+			dnode_wlock = B_FALSE;
+
+			if (tmp_node != NULL)
+				smb_node_release(tmp_node);
+
+			/*
+			 * No more open should be accepted when
+			 * "Delete on close" flag is set.
+			 */
+			if (fnode->flags & NODE_FLAGS_DELETE_ON_CLOSE) {
+				status = NT_STATUS_DELETE_PENDING;
+				goto errout;
+			}
+
+			/*
+			 * Specified file already exists
+			 * so the operation should fail.
+			 */
+			if (op->create_disposition == FILE_CREATE) {
+				status = NT_STATUS_OBJECT_NAME_COLLISION;
+				goto errout;
+			}
+
+			if ((op->create_disposition == FILE_SUPERSEDE) ||
+			    (op->create_disposition == FILE_OVERWRITE_IF) ||
+			    (op->create_disposition == FILE_OVERWRITE)) {
+
+				if (sname == NULL) {
+					if (!smb_sattr_check(
+					    op->fqi.fq_fattr.sa_dosattr,
+					    op->dattr)) {
+						status =
+						    NT_STATUS_ACCESS_DENIED;
+						goto errout;
+					}
+					op->desired_access |=
+					    FILE_WRITE_ATTRIBUTES;
+				}
+
+				if (smb_node_is_dir(fnode)) {
+					status = NT_STATUS_ACCESS_DENIED;
+					goto errout;
+				}
+			}
+
+			/* MS-FSA 2.1.5.1.2 */
+			if (op->create_disposition == FILE_SUPERSEDE)
+				op->desired_access |= DELETE;
+			if ((op->create_disposition == FILE_OVERWRITE_IF) ||
+			    (op->create_disposition == FILE_OVERWRITE))
+				op->desired_access |= FILE_WRITE_DATA;
+		} else if (rc == ENOENT) { /* File Exists, but Stream doesn't */
+			if (op->create_disposition == FILE_OPEN ||
+			    op->create_disposition == FILE_OVERWRITE) {
+				status = NT_STATUS_OBJECT_NAME_NOT_FOUND;
+				goto errout;
+			}
+
+			op->desired_access |= FILE_WRITE_DATA;
+		} else { /* Error looking up stream */
+			status = smb_errno2status(rc);
+			fnode = tmp_node;
 			goto errout;
 		}
 
@@ -520,29 +586,6 @@ smb_common_open(smb_request_t *sr)
 			}
 		}
 
-		if ((op->create_disposition == FILE_SUPERSEDE) ||
-		    (op->create_disposition == FILE_OVERWRITE_IF) ||
-		    (op->create_disposition == FILE_OVERWRITE)) {
-
-			if (!smb_sattr_check(op->fqi.fq_fattr.sa_dosattr,
-			    op->dattr)) {
-				status = NT_STATUS_ACCESS_DENIED;
-				goto errout;
-			}
-
-			if (smb_node_is_dir(fnode)) {
-				status = NT_STATUS_ACCESS_DENIED;
-				goto errout;
-			}
-		}
-
-		/* MS-FSA 2.1.5.1.2 */
-		if (op->create_disposition == FILE_SUPERSEDE)
-			op->desired_access |= DELETE;
-		if ((op->create_disposition == FILE_OVERWRITE_IF) ||
-		    (op->create_disposition == FILE_OVERWRITE))
-			op->desired_access |= FILE_WRITE_DATA;
-
 		/* Dataset roots can't be deleted, so don't set DOC */
 		if ((op->create_options & FILE_DELETE_ON_CLOSE) != 0 &&
 		    (fnode->flags & NODE_FLAGS_VFSROOT) != 0) {
@@ -552,6 +595,7 @@ smb_common_open(smb_request_t *sr)
 
 		status = smb_fsop_access(sr, sr->user_cr, fnode,
 		    op->desired_access);
+
 		if (status != NT_STATUS_SUCCESS)
 			goto errout;
 
@@ -575,6 +619,31 @@ smb_common_open(smb_request_t *sr)
 		if ((op->desired_access & FILE_DATA_ALL) != 0)
 			op->desired_access |= FILE_READ_ATTRIBUTES;
 
+		/* If the stream didn't exist, create it now */
+		if (!stream_found) {
+			smb_node_t *tmp_node = fnode;
+
+			bzero(&new_attr, sizeof (new_attr));
+			new_attr.sa_vattr.va_type = VREG;
+			new_attr.sa_vattr.va_mode = S_IRUSR;
+			new_attr.sa_mask |= SMB_AT_TYPE | SMB_AT_MODE;
+
+			rc = smb_fsop_create_stream(sr, sr->user_cr, dnode,
+			    fnode, sname, lookup_flags, &new_attr, &fnode);
+			smb_node_release(tmp_node);
+
+			if (rc != 0) {
+				status = smb_errno2status(rc);
+				fnode_held = B_FALSE;
+				goto errout;
+			}
+			op->action_taken = SMB_OACT_CREATED;
+			created = B_TRUE;
+
+			smb_node_unlock(dnode);
+			dnode_wlock = B_FALSE;
+		}
+
 		/*
 		 * Oplock break is done prior to sharing checks as the break
 		 * may cause other clients to close the file which would
@@ -592,6 +661,24 @@ smb_common_open(smb_request_t *sr)
 
 		smb_node_inc_opening_count(fnode);
 		opening_incr = B_TRUE;
+
+		if (!stream_found) {
+			/*
+			 * Stake our Share Access claim.
+			 */
+			smb_node_wrlock(fnode);
+			fnode_wlock = B_TRUE;
+
+			status = smb_fsop_shrlock(sr->user_cr, fnode, uniq_fid,
+			    op->desired_access, op->share_access);
+			if (status != 0)
+				goto errout;
+
+			fnode_shrlk = B_TRUE;
+			smb_node_unlock(fnode);
+			fnode_wlock = B_FALSE;
+			goto stream_created;
+		}
 
 		/*
 		 * XXX Supposed to do share access checks next.
@@ -780,11 +867,20 @@ smb_common_open(smb_request_t *sr)
 		case FILE_SUPERSEDE:
 		case FILE_OVERWRITE_IF:
 		case FILE_OVERWRITE:
-			op->dattr |= FILE_ATTRIBUTE_ARCHIVE;
-			/* Don't apply readonly until smb_set_open_attributes */
-			if (op->dattr & FILE_ATTRIBUTE_READONLY) {
-				op->dattr &= ~FILE_ATTRIBUTE_READONLY;
-				op->created_readonly = B_TRUE;
+			bzero(&new_attr, sizeof (new_attr));
+			if (sname == NULL) {
+				op->dattr |= FILE_ATTRIBUTE_ARCHIVE;
+				/*
+				 * Don't apply readonly until
+				 * smb_set_open_attributes
+				 */
+				if (op->dattr & FILE_ATTRIBUTE_READONLY) {
+					op->dattr &= ~FILE_ATTRIBUTE_READONLY;
+					op->created_readonly = B_TRUE;
+				}
+				new_attr.sa_dosattr = op->dattr;
+			} else {
+				new_attr.sa_dosattr = FILE_ATTRIBUTE_ARCHIVE;
 			}
 
 			/*
@@ -793,8 +889,6 @@ smb_common_open(smb_request_t *sr)
 			 * after we have an ofile.  See:
 			 * smb_set_open_attributes
 			 */
-			bzero(&new_attr, sizeof (new_attr));
-			new_attr.sa_dosattr = op->dattr;
 			new_attr.sa_vattr.va_size = 0;
 			new_attr.sa_mask = SMB_AT_DOSATTR | SMB_AT_SIZE;
 			rc = smb_fsop_setattr(sr, sr->user_cr, fnode,
@@ -982,6 +1076,7 @@ create:
 		(void) smb_oplock_break_PARENT(dnode, of);
 	}
 
+stream_created:
 	/*
 	 * We might have blocked in smb_oplock_break_OPEN long enough
 	 * so a tree disconnect might have happened.  In that case,
@@ -1061,6 +1156,8 @@ create:
 	 * how that happens is protocol-specific.
 	 */
 
+	if (sname != NULL)
+		kmem_free(sname, MAXNAMELEN);
 	if (fnode_wlock)
 		smb_node_unlock(fnode);
 	if (opening_incr)
@@ -1091,6 +1188,8 @@ errout:
 		smb_delete_new_object(sr);
 	}
 
+	if (sname != NULL)
+		kmem_free(sname, MAXNAMELEN);
 	if (fnode_wlock)
 		smb_node_unlock(fnode);
 	if (opening_incr)
